style: fix sizing of modal on smaller devices

--- a/frontend/src/components/atomic/coverArt/coverArt.module.css
+++ b/frontend/src/components/atomic/coverArt/coverArt.module.css
@@ -36,6 +36,13 @@
   max-width: fit-content;
 }
 
+.expandedModal {
+  & img {
+    width: 25rem;
+    aspect-ratio: 2/3;
+  }
+}
+
 @media screen and (max-width: 50rem) {
   .coverArt {
     width: 5rem;
