--- a/frontend/src/components/atomic/modal/modal.module.css
+++ b/frontend/src/components/atomic/modal/modal.module.css
@@ -13,6 +13,7 @@
 }
 
 .modalContent {
+  width: max-content;
   padding-block: var(--step-2);
   padding-inline: var(--step-4);
 }
